--- a/misc/arthub.html
+++ b/misc/arthub.html
@@ -2,26 +2,26 @@
 
 <html>
 	<head>
-		<title>The Arthub</title>
+		<title>The ArtHub</title>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="../main.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" type="text/css" href="../assets/css/main.css"/>
+		<link rel="stylesheet" type="text/css" href="../assets/css/zoom.css"/>
 	</head>
 
 	<body>
 		<div class="container">
-
+			
 			<!-- Navigation -->
+			
 			<nav>
 				<div class="navLeft">
-				<a href="../index.html" class="navName">Jeffery Li</a>
+					<a href="../index.html" class="nav-link-l">jl/design</a>
 				</div>
-					
 				<div class="navRight">
-				<a href="../uiux/uiuxwork.html" class="navLink">UI/UX</a>
-				<a href="../graphicdesign/graphicdesign.html" class="navLink">Graphic Design</a>
-				<a href="../photography/photography.html" class="navLink">Photography</a>
-				<a href="../about.html" class="navLink">About</a>
+					<a href="misc.html" class="nav-link">misc.</a>
+					<a href="../photography/photography.html" class="nav-link">photography</a>
+					<a href="../about.html" class="nav-link">about</a>
 				</div>
 			</nav>
 
@@ -29,41 +29,32 @@
 
 			<div class="projnav">
 				<div class="projnavleft">
-					<a class="arrownav" href="samurai.html"><i class="arrowleft"></i>    Samurai</a>
+					<a class="arrownav" href="wingedcanvas.html"><i class="arrowleft"></i>    Winged Canvas</a>
 				</div>
 				<div class="projnavright">
-					<a class="arrownav" href="yrpc.html">The YRPC   <i class="arrowright"></i></a>
+					<a class="arrownav" href="thenetwork.html">The Network   <i class="arrowright"></i></a>
 				</div>
 			</div>
 
-			<!-- Samurai -->
+			<!-- Arthub -->
 
-			<div class="GDpage">
-				<h2 class="GDtitle">The ARTHUB</h2>
-				<h4 class="GDprojectDate">Graphic Design, Branding</h4>
-				<p class="GDprojectinfo">During the summer of 2016, I was interning as Graphic Designer/Jr. Art Director at Winged Canvas, a local art studio in the city of Markham. I was given the opportunity to lead and direct a new brand that is a part of Winged Canvas: The ARTHUB. We wanted the brand to feel "artsy" as Winged Canvas is an art studio. We went with the direction of a photo-realistic logo. As a former fine arts student I spent many days drawing and painting letters with many different styles. I also did some arts and crafts by creating a letter with different fabrics and materials. Framing and printing is a service Winged Canvas offers so I incorporated that by creating a letter with sample frames we had. This project was made by using photography, Adobe Illustrator, and Adobe Photoshop. <p>
-			</div>
-			<div class="GDinfo">
-				<p class="GDinfoA">Summer 2016</p>
-			</div>
+			<h2 class="GDtitle">The ArtHub</h2>
+			<h4 class="GDprojectDate">Graphic Design, Branding</h4>
+			<p class="GDprojectinfo">During the summer of 2016, I was interning as Graphic Designer/Jr. Art Director at Winged Canvas, a local art studio in the city of Markham. I was given the opportunity to lead and direct a new brand that is a part of Winged Canvas: The ArtHub. We wanted the brand to feel "artsy" as Winged Canvas is an art studio. We went with the direction of a photo-realistic logo. As a former fine arts student I spent many hours drawing and painting letters with many different styles. Framing and printing is a service Winged Canvas also offers so I incorporated that by creating a letter with sample frames we had. This project was made by using photography, Adobe Illustrator, and Adobe Photoshop. <p>
+			<p class="GDinfo">Summer 2016</p>
 			<div class="projectMock">
-					<img class="projectMock" src="../images/graphic_design/arthub.jpg">
+					<img class="projectMock" src="../assets/images/graphic_design/arthub.jpg">
 			</div>
 
 			<!-- Footer -->
 
-			<div class="footer">
-				<!-- <a class="footer" href="mailto:jeffery.li@uwaterloo.ca">jeffery.li@uwaterloo.ca</p> -->
-				<a class="footerlink" href="https://www.behance.net/jeffery-li" target=_blank><img class="footericon" src="../images/icons/behance.png"></a>
-				<a class="footerlink" href="https://www.instagram.com/jefferyyli" target=_blank><img class="footericon" src="../images/icons/instagram.png"></a>
-				<a class="footerlink" href="https://500px.com/jefferyyli" target=_blank><img class="footericon" src="../images/icons/500px.png"></a>
-				<a class="footerlink" href="https://www.linkedin.com/in/jefferylii/" target=_blank><img class="footericon" src="../images/icons/linkedin.png"></a>
-				<a class="footerlink" href="https://github.com/jefferyyli" target=_blank><img class="footericon" src="../images/icons/github.png"></a>
-				<a class="footerlink" href="mailto:jeffery.li@uwaterloo.ca"><img class="footericon" src="../images/icons/email.png"></a>
-			</div>
-
+			<footer>
+				<p class="footer-text">Want to chat? Contact me at <a href="mailto: jeffery.li@uwaterloo.ca" class="email" target=_blank>jeffery.li@uwaterloo.ca</a></p>
+			</footer>
 		</div>
-		
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		<script src="../assets/js/zoom.js"></script>
+		<script src="../assets/js/transition.js"></script>
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-109259214-1"></script>
 		<script>
 		  window.dataLayer = window.dataLayer || [];
