--- a/misc/hawkeye.html
+++ b/misc/hawkeye.html
@@ -4,24 +4,24 @@
 	<head>
 		<title>Hawkeye Studios</title>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="../main.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" type="text/css" href="../assets/css/main.css"/>
+		<link rel="stylesheet" type="text/css" href="../assets/css/zoom.css"/>
 	</head>
 
 	<body>
 		<div class="container">
-
+			
 			<!-- Navigation -->
+			
 			<nav>
 				<div class="navLeft">
-				<a href="../index.html" class="navName">Jeffery Li</a>
+					<a href="../index.html" class="nav-link-l">jl/design</a>
 				</div>
-					
 				<div class="navRight">
-				<a href="../uiux/uiuxwork.html" class="navLink">UI/UX</a>
-				<a href="../graphicdesign/graphicdesign.html" class="navLink">Graphic Design</a>
-				<a href="../photography/photography.html" class="navLink">Photography</a>
-				<a href="../about.html" class="navLink">About</a>
+					<a href="misc.html" class="nav-link">misc.</a>
+					<a href="../photography/photography.html" class="nav-link">photography</a>
+					<a href="../about.html" class="nav-link">about</a>
 				</div>
 			</nav>
 
@@ -32,52 +32,40 @@
 					<a class="arrownav" href="samurai.html"><i class="arrowleft"></i>    Samurai</a>
 				</div>
 				<div class="projnavright">
-					<a class="arrownav" href="arthub.html">Art Hub   <i class="arrowright"></i></a>
+					<a class="arrownav" href="wingedcanvas.html">Winged Canvas   <i class="arrowright"></i></a>
 				</div>
 			</div>
 
 			<!-- Hawkeye Studios -->
 
-			<div class="GDpage">
-				<h2 class="GDtitle">Hawkeye Studios</h2>
-				<h4 class="GDprojectDate">Illustration, Graphic Design, <a class="anchor" href="#branding">Branding</a>, <a class="anchor" href="#motiongraphics">Motion Graphics</a></h4>
+			<h2 class="GDtitle">Hawkeye Studios</h2>
+			<h4 class="GDprojectDate">Illustration, Graphic Design, <a class="anchor" href="#branding">Branding</a>, <a class="anchor" href="#motiongraphics">Motion Graphics</a></h4>
 
-				<a name="branding"><h3 class="GDsubtitle">Branding</h3></a>
-				<p class="GDprojectinfo">For our Digital Media Design &amp; Production class we were assigned a branding project. For this assignment, we partnered up with another student (our partner was considered our "client") in class and we had to create a brand for their fictional company. First, we developed a brand architecture for their company which included the brand philosophy, mission, vision, tone of voice, and then we later developed the brand based on the brand architecture we created for our client. This project was made with Adobe Illustrator.</p>
-			</div>
-
-			<div class="GDinfo">
-				<p class="GDinfoA">Fall 2016</p>
-			</div>
+			<a name="branding"><h3 class="GDsubtitle">Branding</h3></a>
+			<p class="GDprojectinfo">For our Digital Media Design &amp; Production class we were assigned a branding project. For this assignment, we partnered up with another student (our partner was considered our "client") in class and we had to create a brand for their fictional company. First, we developed a brand architecture for their company which included the brand philosophy, mission, vision, tone of voice, and then we later developed the brand based on the brand architecture we created for our client. This project was made with Adobe Illustrator.</p>
+			<p class="GDinfo">Fall 2016</p>
 
 			<div class="projectMock">
-					<img class="projectMock" src="../images/graphic_design/hawkeye.jpg">
-					<img class="projectMock" src="../images/graphic_design/hawkeyebrand.jpg">
+					<img class="projectMock" src="../assets/images/graphic_design/hawkeye.jpg" data-action="zoom">
+					<img class="projectMock" src="../assets/images/graphic_design/hawkeyebrand.jpg" data-action="zoom">
 			</div>
 
-			<div class="GDpage2">
-				<a name="motiongraphics"><h3 class="GDsubtitle">Motion Graphics</h3></a>
-
-				<p class="GDprojectinfo">For the second part of our project, we had to make a short animated video for our client. I used the illustrations I made in the branding portion of the project for my motion graphics video. For this project I wanted to learn how to animate logos and as learn how to use the software as this would be my first time creating motion graphics. The dimensions for this video is a bit odd as we had to fit our video on a 3 story microtile wall. This portion of the project was made with Adobe Illustrator and Adobe After Effects.</p>
-
-			</div>
 			
-			<iframe src="https://player.vimeo.com/video/198282541" width="100%" height="1000" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+			<a name="motiongraphics"><h3 class="GDsubtitle" style="margin-top: 3em">Motion Graphics</h3></a>
+			<p class="GDprojectinfo">For the second part of our project, we had to make a short animated video for our client. I used the illustrations I made in the branding portion of the project for my motion graphics video. For this project I wanted to learn how to animate logos and as learn how to use the software as this would be my first time creating motion graphics. The dimensions for this video is a bit odd as we had to fit our video on a 3 story microtile wall. This portion of the project was made with Adobe Illustrator and Adobe After Effects.</p>
+
+			
+			<iframe src="https://player.vimeo.com/video/198282541" style="margin-top: 2em" width="100%" height="1000" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
 			<!-- Footer -->
 
-			<div class="footer">
-				<!-- <a class="footer" href="mailto:jeffery.li@uwaterloo.ca">jeffery.li@uwaterloo.ca</p> -->
-				<a class="footerlink" href="https://www.behance.net/jeffery-li" target=_blank><img class="footericon" src="../images/icons/behance.png"></a>
-				<a class="footerlink" href="https://www.instagram.com/jefferyyli" target=_blank><img class="footericon" src="../images/icons/instagram.png"></a>
-				<a class="footerlink" href="https://500px.com/jefferyyli" target=_blank><img class="footericon" src="../images/icons/500px.png"></a>
-				<a class="footerlink" href="https://www.linkedin.com/in/jefferylii/" target=_blank><img class="footericon" src="../images/icons/linkedin.png"></a>
-				<a class="footerlink" href="https://github.com/jefferyyli" target=_blank><img class="footericon" src="../images/icons/github.png"></a>
-				<a class="footerlink" href="mailto:jeffery.li@uwaterloo.ca"><img class="footericon" src="../images/icons/email.png"></a>
-			</div>
-			
+			<footer>
+				<p class="footer-text">Want to chat? Contact me at <a href="mailto: jeffery.li@uwaterloo.ca" class="email" target=_blank>jeffery.li@uwaterloo.ca</a></p>
+			</footer>
 		</div>
-		
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		<script src="../assets/js/zoom.js"></script>
+		<script src="../assets/js/transition.js"></script>
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-109259214-1"></script>
 		<script>
 		  window.dataLayer = window.dataLayer || [];
