--- a/misc/misc.html
+++ b/misc/misc.html
@@ -29,17 +29,17 @@
 
 			<div class="grid">
 				<div class="col-3">
-					<a href="#" class="projectPicBox"><div class="misc-img" style="background-image: url('../assets/images/graphic_design/samurai.jpg')"></div></a>
-					<a href="#" class="projectPicBox"><div class="misc-img" style="background-image: url('../assets/images/graphic_design/wcmovingbox.jpg')"></div></a>
-					<a href="#" class="projectPicBox"><div class="misc-img" style="background-image: url('../assets/images/graphic_design/yrpc.jpg')"></div></a>
+					<a href="samurai.html" class="projectPicBox"><div class="misc-img" style="background-image: url('../assets/images/graphic_design/samurai.jpg')"></div></a>
+					<a href="wingedcanvas.html" class="projectPicBox"><div class="misc-img" style="background-image: url('../assets/images/graphic_design/wcmovingbox.jpg')"></div></a>
+					<a href="yrpc.html" class="projectPicBox"><div class="misc-img" style="background-image: url('../assets/images/graphic_design/yrpc.jpg')"></div></a>
 				</div>
 				<div class="col-3">
-					<a href="#" class="projectPicBox"><div class="misc-img" style="background-image: url('../assets/images/graphic_design/hawkeyebox.jpg')"></div></a>
-					<a href="#" class="projectPicBox"><div class="misc-img" style="background-image: url('../assets/images/graphic_design/arthubbox.jpg')"></div></a>
+					<a href="hawkeye.html" class="projectPicBox"><div class="misc-img" style="background-image: url('../assets/images/graphic_design/hawkeyebox.jpg')"></div></a>
+					<a href="arthub.html" class="projectPicBox"><div class="misc-img" style="background-image: url('../assets/images/graphic_design/arthubbox.jpg')"></div></a>
 				</div>
 				<div class="col-3 last">
 					<a href="#" class="projectPicBox"><div class="misc-img" style="background-image: url('../assets/images/graphic_design/bomberbox.jpg')"></div></a>
-					<a href="#" class="projectPicBox"><div class="misc-img" style="background-image: url('../assets/images/graphic_design/networkbox.jpg')"></div></a>
+					<a href="thenetwork.html" class="projectPicBox"><div class="misc-img" style="background-image: url('../assets/images/graphic_design/networkbox.jpg')"></div></a>
 				</div>
 			</div>
 			
