--- a/misc/samurai.html
+++ b/misc/samurai.html
@@ -4,24 +4,24 @@
 	<head>
 		<title>Samurai</title>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="../main.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" type="text/css" href="../assets/css/main.css"/>
+		<link rel="stylesheet" type="text/css" href="../assets/css/zoom.css"/>
 	</head>
 
 	<body>
 		<div class="container">
-
+			
 			<!-- Navigation -->
+			
 			<nav>
 				<div class="navLeft">
-				<a href="../index.html" class="navName">Jeffery Li</a>
+					<a href="../index.html" class="nav-link-l">jl/design</a>
 				</div>
-					
 				<div class="navRight">
-				<a href="../uiux/uiuxwork.html" class="navLink">UI/UX</a>
-				<a href="../graphicdesign/graphicdesign.html" class="navLink">Graphic Design</a>
-				<a href="../photography/photography.html" class="navLink">Photography</a>
-				<a href="../about.html" class="navLink">About</a>
+					<a href="misc.html" class="nav-link">misc.</a>
+					<a href="../photography/photography.html" class="nav-link">photography</a>
+					<a href="../about.html" class="nav-link">about</a>
 				</div>
 			</nav>
 
@@ -29,7 +29,7 @@
 
 			<div class="projnav">
 				<div class="projnavleft">
-					<a class="arrownav" href="thenetwork.html"><i class="arrowleft"></i>    The Network</a>
+					<a class="arrownav" href="yrpc.html"><i class="arrowleft"></i>    The YRPC</a>
 				</div>
 				<div class="projnavright">
 					<a class="arrownav" href="hawkeye.html">Hawkeye Studios   <i class="arrowright"></i></a>
@@ -38,36 +38,27 @@
 
 			<!-- Samurai -->
 
-			<div class="GDpage">
-				<h2 class="GDtitle">Samurai Vector Illustration</h2>
-				<h4 class="GDprojectDate">Illustration</h4>
-				<p class="GDprojectinfo">During the summer I wanted to try learning how to make a vector illustration. I decided to take an old high school fine arts project and redrew the entire drawing on Adobe Illustrator. I made some visual changes from the old drawing and I free handed the helmet and armor details as well.<p>
-			</div>
-			<div class="GDinfo">
-				<p class="GDinfoA">Summer 2016</p>
-			</div>
+			<h2 class="GDtitle">Samurai Vector Illustration</h2>
+			<h4 class="GDprojectDate">Illustration</h4>
+			<p class="GDprojectinfo">During the summer I wanted to try learning how to make a vector illustration. I decided to take an old high school fine arts project and redrew the entire drawing on Adobe Illustrator. I made some visual changes from the old drawing and I free handed the helmet and armor details as well.<p>
+			<p class="GDinfo">Summer 2016</p>
 			<div class="projectMock">
-					<img class="projectMock" src="../images/graphic_design/samurai.jpg">
-					<img class="projectMock" src="../images/graphic_design/samuraihead.jpg">
-					<img class="projectMock" src="../images/graphic_design/samuraishoulder.jpg">
-					<img class="projectMock" src="../images/graphic_design/samuraihand.jpg">
-					<img class="projectMock" src="../images/graphic_design/samurai-line-art.jpg">
+					<img class="projectMock" src="../assets/images/graphic_design/samurai.jpg" data-action="zoom">
+					<img class="projectMock" src="../assets/images/graphic_design/samuraihead.jpg" data-action="zoom">
+					<img class="projectMock" src="../assets/images/graphic_design/samuraishoulder.jpg" data-action="zoom">
+					<img class="projectMock" src="../assets/images/graphic_design/samuraihand.jpg" data-action="zoom">
+					<img class="projectMock" src="../assets/images/graphic_design/samurai-line-art.jpg" data-action="zoom">
 			</div>
 
 			<!-- Footer -->
 
-			<div class="footer">
-				<!-- <a class="footer" href="mailto:jeffery.li@uwaterloo.ca">jeffery.li@uwaterloo.ca</p> -->
-				<a class="footerlink" href="https://www.behance.net/jeffery-li" target=_blank><img class="footericon" src="../images/icons/behance.png"></a>
-				<a class="footerlink" href="https://www.instagram.com/jefferyyli" target=_blank><img class="footericon" src="../images/icons/instagram.png"></a>
-				<a class="footerlink" href="https://500px.com/jefferyyli" target=_blank><img class="footericon" src="../images/icons/500px.png"></a>
-				<a class="footerlink" href="https://www.linkedin.com/in/jefferylii/" target=_blank><img class="footericon" src="../images/icons/linkedin.png"></a>
-				<a class="footerlink" href="https://github.com/jefferyyli" target=_blank><img class="footericon" src="../images/icons/github.png"></a>
-				<a class="footerlink" href="mailto:jeffery.li@uwaterloo.ca"><img class="footericon" src="../images/icons/email.png"></a>
-			</div>
-
+			<footer>
+				<p class="footer-text">Want to chat? Contact me at <a href="mailto: jeffery.li@uwaterloo.ca" class="email" target=_blank>jeffery.li@uwaterloo.ca</a></p>
+			</footer>
 		</div>
-		
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		<script src="../assets/js/zoom.js"></script>
+		<script src="../assets/js/transition.js"></script>
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-109259214-1"></script>
 		<script>
 		  window.dataLayer = window.dataLayer || [];
