--- a/misc/thenetwork.html
+++ b/misc/thenetwork.html
@@ -2,26 +2,26 @@
 
 <html>
 	<head>
-		<title>The Network</title>
+		<title>The ArtHub</title>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="../main.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" type="text/css" href="../assets/css/main.css"/>
+		<link rel="stylesheet" type="text/css" href="../assets/css/zoom.css"/>
 	</head>
 
 	<body>
 		<div class="container">
-
+			
 			<!-- Navigation -->
+			
 			<nav>
 				<div class="navLeft">
-				<a href="../index.html" class="navName">Jeffery Li</a>
+					<a href="../index.html" class="nav-link-l">jl/design</a>
 				</div>
-					
 				<div class="navRight">
-				<a href="../uiux/uiuxwork.html" class="navLink">UI/UX</a>
-				<a href="../graphicdesign/graphicdesign.html" class="navLink">Graphic Design</a>
-				<a href="../photography/photography.html" class="navLink">Photography</a>
-				<a href="../about.html" class="navLink">About</a>
+					<a href="misc.html" class="nav-link">misc.</a>
+					<a href="../photography/photography.html" class="nav-link">photography</a>
+					<a href="../about.html" class="nav-link">about</a>
 				</div>
 			</nav>
 
@@ -29,43 +29,34 @@
 
 			<div class="projnav">
 				<div class="projnavleft">
-					<a class="arrownav" href="wingedcanvas.html"><i class="arrowleft"></i>    Winged Canvas Moving</a>
+					<a class="arrownav" href="arthub.html"><i class="arrowleft"></i>      The Arthub</a>
 				</div>
 				<div class="projnavright">
-					<a class="arrownav" href="samurai.html">Samurai   <i class="arrowright"></i></a>
+					<a class="arrownav" href="yrpc.html">The YRPC  <i class="arrowright"></i></a>
 				</div>
 			</div>
 
-			<!-- Samurai -->
+			<!-- The Network -->
 
-			<div class="GDpage">
-				<h2 class="GDtitle">The Network</h2>
-				<h4 class="GDprojectDate">Editorial Design, Graphic Design</h4>
-				<p class="GDprojectinfo">During my senior year of highschool, I was editor and designer on the yearbook team. The theme for our yearbook was the network as our team believed that our generation is very well connected through technology. We wanted our designs to feel a sense of connection for our graduating year. I designed the front cover of the yearbook, title page, table of contents, and dividers.<p>
-			</div>
-			<div class="GDinfo">
-				<p class="GDinfoA">Fall &amp; Winter 2015</p>
-			</div>
+			<h2 class="GDtitle">The Network</h2>
+			<h4 class="GDprojectDate">Editorial Design, Graphic Design</h4>
+			<p class="GDprojectinfo">During my senior year of highschool, I was editor and designer on the yearbook team. The theme for our yearbook was the network as our team believed that our generation is very well connected through technology. We wanted our designs to feel a sense of connection for our graduating year. I designed the front cover of the yearbook, title page, table of contents, and dividers.<p>
+			<p class="GDinfo">Fall &amp; Winter 2015</p>
 			<div class="projectMock">
-					<img class="projectMock" src="../images/graphic_design/networkcover.jpg">
-					<img class="projectMock" src="../images/graphic_design/networktoc.jpg">
-					<img class="projectMock" src="../images/graphic_design/networkdivider.jpg">
+					<img class="projectMock" src="../assets/images/graphic_design/networkcover.jpg" data-action="zoom">
+					<img class="projectMock" src="../assets/images/graphic_design/networktoc.jpg" data-action="zoom">
+					<img class="projectMock" src="../assets/images/graphic_design/networkdivider.jpg" data-action="zoom">
 			</div>
 
 			<!-- Footer -->
 
-			<div class="footer">
-				<!-- <a class="footer" href="mailto:jeffery.li@uwaterloo.ca">jeffery.li@uwaterloo.ca</p> -->
-				<a class="footerlink" href="https://www.behance.net/jeffery-li" target=_blank><img class="footericon" src="../images/icons/behance.png"></a>
-				<a class="footerlink" href="https://www.instagram.com/jefferyyli" target=_blank><img class="footericon" src="../images/icons/instagram.png"></a>
-				<a class="footerlink" href="https://500px.com/jefferyyli" target=_blank><img class="footericon" src="../images/icons/500px.png"></a>
-				<a class="footerlink" href="https://www.linkedin.com/in/jefferylii/" target=_blank><img class="footericon" src="../images/icons/linkedin.png"></a>
-				<a class="footerlink" href="https://github.com/jefferyyli" target=_blank><img class="footericon" src="../images/icons/github.png"></a>
-				<a class="footerlink" href="mailto:jeffery.li@uwaterloo.ca"><img class="footericon" src="../images/icons/email.png"></a>
-			</div>
-
+			<footer>
+				<p class="footer-text">Want to chat? Contact me at <a href="mailto: jeffery.li@uwaterloo.ca" class="email" target=_blank>jeffery.li@uwaterloo.ca</a></p>
+			</footer>
 		</div>
-
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		<script src="../assets/js/zoom.js"></script>
+		<script src="../assets/js/transition.js"></script>
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-109259214-1"></script>
 		<script>
 		  window.dataLayer = window.dataLayer || [];
