--- a/misc/wingedcanvas.html
+++ b/misc/wingedcanvas.html
@@ -2,26 +2,26 @@
 
 <html>
 	<head>
-		<title>Winged Canvas Moving</title>
+		<title>Winged Canvas</title>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="../main.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" type="text/css" href="../assets/css/main.css"/>
+		<link rel="stylesheet" type="text/css" href="../assets/css/zoom.css"/>
 	</head>
 
 	<body>
 		<div class="container">
-
+			
 			<!-- Navigation -->
+			
 			<nav>
 				<div class="navLeft">
-				<a href="../index.html" class="navName">Jeffery Li</a>
+					<a href="../index.html" class="nav-link-l">jl/design</a>
 				</div>
-					
 				<div class="navRight">
-				<a href="../uiux/uiuxwork.html" class="navLink">UI/UX</a>
-				<a href="../graphicdesign/graphicdesign.html" class="navLink">Graphic Design</a>
-				<a href="../photography/photography.html" class="navLink">Photography</a>
-				<a href="../about.html" class="navLink">About</a>
+					<a href="misc.html" class="nav-link">misc.</a>
+					<a href="../photography/photography.html" class="nav-link">photography</a>
+					<a href="../about.html" class="nav-link">about</a>
 				</div>
 			</nav>
 
@@ -29,51 +29,37 @@
 
 			<div class="projnav">
 				<div class="projnavleft">
-					<a class="arrownav" href="yrpc.html"><i class="arrowleft"></i>    The YRPC</a>
+					<a class="arrownav" href="hawkeye.html"><i class="arrowleft"></i>    Hawkeye Studios</a>
 				</div>
 				<div class="projnavright">
-					<a class="arrownav" href="thenetwork.html">The Network   <i class="arrowright"></i></a>
+					<a class="arrownav" href="arthub.html">The ArtHub   <i class="arrowright"></i></a>
 				</div>
 			</div>
 
 			<!-- Winged Canvas -->
 
-			<div class="GDpage">
-				<h2 class="GDtitle">Winged Canvas is Moving!!</h2>
-				<h4 class="GDprojectDate">Illustration, Graphic Design</h4>
-				<p class="GDprojectinfo">During the summer of 2016, I was interning as Graphic Designer/Jr. Art Director at Winged Canvas, a local art studio in the city of Markham. At the end of my internship, Winged Canvas was moving to a much larger and central location. I was tasked with creating posters and emails to inform people about the move. For this project, I decided to make a vector illustration to visualize the journey this company has gone through.<p>
-			</div>
-			<div class="GDinfo">
-				<p class="GDinfoA">August 2016</p>
-			</div>
+			<h2 class="GDtitle">Winged Canvas is Moving!!</h2>
+			<h4 class="GDprojectDate">Illustration, Graphic Design</h4>
+			<p class="GDprojectinfo">During the summer of 2016, I was interning as Graphic Designer/Jr. Art Director at Winged Canvas, a local art studio in the city of Markham. At the end of my internship, Winged Canvas was moving to a much larger and central location. I was tasked with creating posters and emails to inform people about the move. For this project, I decided to make a vector illustration to visualize the journey this company has gone through.<p>
+			<p class="GDinfo">August 2016</p>
 			<div class="projectMock">
-					<img class="projectMock" src="../images/graphic_design/wcmovingmockup.jpg">
+					<img class="projectMock" src="../assets/images/graphic_design/wcmovingmockup.jpg" data-action="zoom">
 			</div>
-
-			<div class="GDpage2">
-				<a name="motiongraphics"><h3 class="GDsubtitle">Email &amp; Illustrations</h3></a>
-
-				<p class="GDprojectinfo">I worked with a copywriter to create the content and as well as use the copy to inspire my designs. We decided to use "Home is where the Art is" as copy to let people know that our amazing staff and stellar art nerd culture will be waiting for them at our new location! The road with different seasons and landscapes showed that this small company worked hard to get to where they are today. I decided to make the illustrations minimalistic and used a cartoony typeface because the main audience were children and parents.</p>
-
-			</div>
+			<h3 class="GDsubtitle" style="margin-top: 3em">Email &amp; Illustrations</h3></a>
+			<p class="GDprojectinfo" style="margin-bottom: 2em">I worked with a copywriter to create the content and as well as use the copy to inspire my designs. We decided to use "Home is where the Art is" as copy to let people know that our amazing staff and stellar art nerd culture will be waiting for them at our new location! The road with different seasons and landscapes showed that this small company worked hard to get to where they are today. I decided to make the illustrations minimalistic and used a cartoony typeface because the main audience were children and parents.</p>
 			<div class="projectMock">
-					<img class="projectMock" src="../images/graphic_design/wcemail.jpg">
+					<img class="projectMock" src="../assets/images/graphic_design/wcemail.jpg" data-action="zoom">
 			</div>
 
 			<!-- Footer -->
-			
-			<div class="footer">
-				<!-- <a class="footer" href="mailto:jeffery.li@uwaterloo.ca">jeffery.li@uwaterloo.ca</p> -->
-				<a class="footerlink" href="https://www.behance.net/jeffery-li" target=_blank><img class="footericon" src="../images/icons/behance.png"></a>
-				<a class="footerlink" href="https://www.instagram.com/jefferyyli" target=_blank><img class="footericon" src="../images/icons/instagram.png"></a>
-				<a class="footerlink" href="https://500px.com/jefferyyli" target=_blank><img class="footericon" src="../images/icons/500px.png"></a>
-				<a class="footerlink" href="https://www.linkedin.com/in/jefferylii/" target=_blank><img class="footericon" src="../images/icons/linkedin.png"></a>
-				<a class="footerlink" href="https://github.com/jefferyyli" target=_blank><img class="footericon" src="../images/icons/github.png"></a>
-				<a class="footerlink" href="mailto:jeffery.li@uwaterloo.ca"><img class="footericon" src="../images/icons/email.png"></a>
-			</div>
 
+			<footer>
+				<p class="footer-text">Want to chat? Contact me at <a href="mailto: jeffery.li@uwaterloo.ca" class="email" target=_blank>jeffery.li@uwaterloo.ca</a></p>
+			</footer>
 		</div>
-
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		<script src="../assets/js/zoom.js"></script>
+		<script src="../assets/js/transition.js"></script>
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-109259214-1"></script>
 		<script>
 		  window.dataLayer = window.dataLayer || [];
