--- a/misc/yrpc.html
+++ b/misc/yrpc.html
@@ -2,26 +2,26 @@
 
 <html>
 	<head>
-		<title>The York Region Presidents' Council Logo</title>
+		<title>The YRPC</title>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="../main.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" type="text/css" href="../assets/css/main.css"/>
+		<link rel="stylesheet" type="text/css" href="../assets/css/zoom.css"/>
 	</head>
 
 	<body>
 		<div class="container">
-
+			
 			<!-- Navigation -->
+			
 			<nav>
 				<div class="navLeft">
-				<a href="../index.html" class="navName">Jeffery Li</a>
+					<a href="../index.html" class="nav-link-l">jl/design</a>
 				</div>
-					
 				<div class="navRight">
-				<a href="../uiux/uiuxwork.html" class="navLink">UI/UX</a>
-				<a href="../graphicdesign/graphicdesign.html" class="navLink">Graphic Design</a>
-				<a href="../photography/photography.html" class="navLink">Photography</a>
-				<a href="../about.html" class="navLink">About</a>
+					<a href="misc.html" class="nav-link">misc.</a>
+					<a href="../photography/photography.html" class="nav-link">photography</a>
+					<a href="../about.html" class="nav-link">about</a>
 				</div>
 			</nav>
 
@@ -29,40 +29,34 @@
 
 			<div class="projnav">
 				<div class="projnavleft">
-					<a class="arrownav" href="arthub.html"><i class="arrowleft"></i>    Art Hub</a>
+					<a class="arrownav" href="thenetwork.html"><i class="arrowleft"></i>    The Network</a>
 				</div>
 				<div class="projnavright">
-					<a class="arrownav" href="wingedcanvas.html">Winged Canvas   <i class="arrowright"></i></a>
+					<a class="arrownav" href="samurai.html">Samurai   <i class="arrowright"></i></a>
 				</div>
 			</div>
 
 			<!-- YRPC -->
 
-			<div class="GDpage">
-				<h2 class="GDtitle">The York Region Presidents' Council Logo Update</h2>
-				<h4 class="GDprojectDate">Graphic Design</h4>
-				<p class="GDprojectinfo">York Region Presidents' Council (YRPC) is an organization that consists of Presidents and Vice Presidents, and a third representatives of all 32 secondary schools in the York Region District School Board. YRPC works with the two Student Trustees and the YRDSB to voice student concerns.<p>
-				<p class="GDprojectinfo">As an elected member of the YRPC, I was the Minister of Communications where I handed the social media accounts, marketing, photography, and designs of YRPC assets. When I first started in YRPC, I decided that it would be best to update our logo as the logo was very outdated (think 1990s to early 2000s style). I kept the logo as a coat of arms and made sure to include four different areas of education: arts, mathematics and the sciences, geography and social studies, and physical activities.</p>
-			</div>
-			<div class="GDinfo">
-				<p class="GDinfoA">September 2014</p>
-			</div>
+			<h2 class="GDtitle">The York Region Presidents' Council Logo Update</h2>
+			<h4 class="GDprojectDate">Graphic Design</h4>
+			<p class="GDprojectinfo">York Region Presidents' Council (YRPC) is an organization that consists of Presidents and Vice Presidents, and a third representatives of all 32 secondary schools in the York Region District School Board. YRPC works with the two Student Trustees and the YRDSB to voice student concerns.<p>
+			<p class="GDprojectinfo">As an elected member of the YRPC, I was the Minister of Communications where I handed the social media accounts, marketing, photography, and designs of YRPC assets. When I first started in YRPC, I decided that it would be best to update our logo as the logo was very outdated (think 1990s to early 2000s style). I kept the logo as a coat of arms and made sure to include four different areas of education: arts, mathematics and the sciences, geography and social studies, and physical activities.</p>
+			<p class="GDinfo">September 2014</p>
 			<div class="projectMock">
-					<img class="projectMock" src="../images/graphic_design/yrpclogo.jpg">
-					<img class="projectMock" src="../images/graphic_design/yrpcmockup.jpg">
+					<img class="projectMock" src="../assets/images/graphic_design/yrpclogo.jpg" data-action="zoom">
+					<img class="projectMock" src="../assets/images/graphic_design/yrpcmockup.jpg" data-action="zoom">
 			</div>
 
-			<div class="footer">
-				<a class="footerlink" href="https://www.behance.net/jeffery-li" target=_blank><img class="footericon" src="../images/icons/behance.png"></a>
-				<a class="footerlink" href="https://www.instagram.com/jefferyyli" target=_blank><img class="footericon" src="../images/icons/instagram.png"></a>
-				<a class="footerlink" href="https://500px.com/jefferyyli" target=_blank><img class="footericon" src="../images/icons/500px.png"></a>
-				<a class="footerlink" href="https://www.linkedin.com/in/jefferylii/" target=_blank><img class="footericon" src="../images/icons/linkedin.png"></a>
-				<a class="footerlink" href="https://github.com/jefferyyli" target=_blank><img class="footericon" src="../images/icons/github.png"></a>
-				<a class="footerlink" href="mailto:jeffery.li@uwaterloo.ca"><img class="footericon" src="../images/icons/email.png"></a>
-			</div>
-			
+			<!-- Footer -->
+
+			<footer>
+				<p class="footer-text">Want to chat? Contact me at <a href="mailto: jeffery.li@uwaterloo.ca" class="email" target=_blank>jeffery.li@uwaterloo.ca</a></p>
+			</footer>
 		</div>
-
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		<script src="../assets/js/zoom.js"></script>
+		<script src="../assets/js/transition.js"></script>
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-109259214-1"></script>
 		<script>
 		  window.dataLayer = window.dataLayer || [];
